cleaned some stuff up, pushed projects to be more visible. NOTE: some real bad inline stuff needs to be fixed later

--- a/res/css/main.css
+++ b/res/css/main.css
@@ -383,7 +383,8 @@ hr {
   font-size: 30px;
 }
 
-.gameDate{
+.gameDate {
+  visibility: hidden; /*temporary*/
   padding: 10px;
   font-style: italic;
   vertical-align: middle;
